# omniverse-ops-starter

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: amr_routes.json  factory_layout.json  ops_scenarios.json
docs/: isaac-amr-scenario.md  live-telemetry.md  setup.md  usd-layers-and-variants.md  workflow.md
isaac/: amr_waypoint_task.py
kit-extension/exts/omniverse.ops.starter/config/: extension.toml
kit-extension/exts/omniverse.ops.starter/omniverse/ops/starter/: __init__.py  extension.py
scripts/: create_demo_stage.py  create_layered_stage.py  telemetry_server.py  validate_layered_stage.py  validate_stage.py
tests/: test_scene_contract.py
web-demo/: app.js  index.html  styles.css
