[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "omniverse-ops-starter"
version = "0.1.0"
description = "A beginner-friendly NVIDIA Omniverse and OpenUSD operations starter project."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Junbin Kuo" }]
dependencies = []

[project.optional-dependencies]
usd = ["usd-core>=25.5"]
dev = ["ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py310"
