[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "omniverse-ops-starter"
version = "0.2.0"
description = "A data-driven NVIDIA Omniverse and OpenUSD factory digital twin starter project."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Junbin Kuo" }]
dependencies = []

[project.optional-dependencies]
usd = ["usd-core>=25.5"]
dev = ["ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools]
py-modules = []
